# software-dev-management-app

./: .gitignore  README.md  package.json
apps/backend/: .env.example  generate_license_keys.py  pyproject.toml
apps/backend/src/: main.py
apps/backend/src/core/: config.py
apps/backend/src/db/: database.py
apps/backend/src/models/: __init__.py  license_key.py  project.py  task.py  user.py
apps/backend/src/routers/: auth.py  license_keys.py  projects.py  tasks.py  users.py
apps/backend/src/schemas/: __init__.py  license_key.py  project.py  task.py  user.py
apps/backend/src/utils/: security.py
apps/backend/tests/: conftest.py  test_auth.py  test_license_keys.py  test_projects.py  test_tasks.py
apps/web/: .gitignore  111tailwind.config.js  jest.config.mjs  jest.setup.ts  package.json
apps/web/src/__tests__/: AuthContext.test.tsx  ProtectedRoute.test.tsx  apiClient.test.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AuthenticatedNav.tsx  DashboardStat.tsx  KanbanBoardView.tsx  KanbanColumn.tsx  ProjectCard.tsx  ProjectStats.tsx  ProtectedRoute.tsx  TaskCard.tsx  footer.tsx  get_started_button.tsx  linkedButton.tsx  navigation.tsx
apps/web/src/contexts/: AuthContext.tsx
apps/web/src/hooks/: useProjectTasks.ts
apps/web/src/lib/: api.ts  apiClient.ts
apps/web/src/pages/: _app.tsx  globals.css  index.tsx
python_app/basic_funcs/: ChatBox.py  chatBox.py  client.py  roomList.py  server.py  server_discovery.py
python_app/ui/: GUI.py  chatboxUI.py  chatboxUI.ui  chatlistUI.py  karaokeUI.py  karaokeUI.ui  phaseIIRecorderUI.py  phaseIIRecorderUI.ui  roomlistUI.py  roomlistUI.ui  version.ui
(+13 files in other folders)
